Source/WebCore: REGRESSION (r94132): broke fast/loader/location-port.html on GTK https://bugs.webkit.org/show_bug.cgi?id=67277

Patch by Devdatta Deshpande <webkit.devdatta@gmail.com> on 2011-11-03
Reviewed by Adam Barth.

If port is 0, SoupURI does not have an explicitly specified port. Due
to this port value is ignored in SoupURI. Hence, an extra check is
required to restore the port.

Test: LayoutTests/fast/loader/location-port.html

* platform/network/soup/ResourceRequestSoup.cpp:
(WebCore::ResourceRequest::updateFromSoupMessage):

LayoutTests: REGRESSION (r94132): broke fast/loader/location-port.html on GTK
https://bugs.webkit.org/show_bug.cgi?id=67277

Patch by Devdatta Deshpande <webkit.devdatta@gmail.com> on 2011-11-03
Reviewed by Adam Barth.

Removed LayoutTests/fast/loader/location-port.html from Skipped tests
for GTK

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/87748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99157 268f45cc-cd09-0410-ab3c-d52691b4dbfc