Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp
@@ -85,7 +85,13 @@ SoupMessage* ResourceRequest::toSoupMessage() const
 
 void ResourceRequest::updateFromSoupMessage(SoupMessage* soupMessage)
 {
+    bool shouldPortBeResetToZero = m_url.hasPort() && !m_url.port();
     m_url = soupURIToKURL(soup_message_get_uri(soupMessage));
+
+    // SoupURI cannot differeniate between an explicitly specified port 0 and
+    // no port specified.
+    if (shouldPortBeResetToZero)
+        m_url.setPort(0);
 
     m_httpMethod = String::fromUTF8(soupMessage->method);
 
